syntax = "proto3";

package storage;
import "User_schema.proto";


message User_CreateUserRequest {
    User user = 1;
}

message User_CreateUserResponse {
    string UUID = 1;
}